# proper

./: Cargo.toml
libproper/: Cargo.toml
libproper/src/: error.rs  event.rs  layer.rs  lib.rs
libproper/src/layer/: gui.rs  input.rs  logic.rs  mod.rs  world.rs
libproper/src/render/: context.rs  frame.rs  gui.rs  mod.rs  scene.rs
libproper/src/render/shader/: mod.rs  scene.frag  scene.vert  screen.frag  screen.vert
libproper/src/render/system/: forward.rs  mod.rs  screen.rs
libproper/src/resource/: material.rs  mod.rs  model.rs  texture.rs
libproper/src/world/: camera.rs  entity.rs  mod.rs  scene.rs
res/models/: monkey.blend  torus.blend  torus.blend1
src/: main.rs
