[package]
name = "libproper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_winit_vulkano = { git = "https://github.com/hakolao/egui_winit_vulkano" }
log = "0.4.17"
nalgebra = { version = "0.31.0", features = ["bytemuck"] }
vulkano =  { version = "0.29.0", git = "https://github.com/vulkano-rs/vulkano", ref = "e8cf282" }
vulkano-shaders =  { version = "0.29.0", git = "https://github.com/vulkano-rs/vulkano", ref = "e8cf282" }
vulkano-win =  { version = "0.29.0", git = "https://github.com/vulkano-rs/vulkano", ref = "e8cf282" }
winit = "0.26.1"
