[package]
name = "libproper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.10.0"
bytemuck_derive = "1.1.1"
coz = { version = "0.1.3", optional = true }
egui_winit_vulkano = { git = "https://github.com/hakolao/egui_winit_vulkano" }
log = "0.4.17"
nalgebra = { version = "0.31.0", features = ["bytemuck"] }
obj-rs = "0.7.0"
rand = "0.8.5"
rayon = "1.5.3"
thiserror = "1.0.31"
vulkano =  { version = "^0.30.0", features = ["nalgebra"] }
vulkano-shaders =  { version = "^0.30.0" }
vulkano-win =  { version = "^0.30.0" }
winit = "0.26.1"

[features]
default = ["coz"]
